04_OOD/example/oop/DesignPrinciples/src/com/schonherz/education/oop/design/principles/clazz/solid/ocp/drawing/good/GraphicEditor.java
package com.schonherz.education.oop.design.principles.clazz.solid.ocp.drawing.good;

/**
 * OCP is followed, as to extend functionality this class does not require to
 * change
 * 
 * @author Janos Pelsoczi
 * 
 */
public class GraphicEditor {

	public void drawShape(Shape s) {
		s.draw();
	}
}
