04_OOD/example/oop/DesignPrinciples/src/com/schonherz/education/oop/design/principles/clazz/solid/ocp/drawing/bad/Shape.java
package com.schonherz.education.oop.design.principles.clazz.solid.ocp.drawing.bad;

/**
 * This class indicates shape type
 * 
 * @author Janos Pelsoczi
 * 
 */
public class Shape {
	int m_type;
}
